# TraceLoopCI

./: .coverage  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  pyproject.toml  requirements.txt
TraceLoopCI/: CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  docker-compose.yml  pyproject.toml  traceloop.db
TraceLoopCI/.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
TraceLoopCI/.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
TraceLoopCI/.github/workflows/: ci.yml  traceloop-eval.yml
TraceLoopCI/app/: __init__.py  config.py
TraceLoopCI/app/models/: __init__.py  golden.py  trace.py
TraceLoopCI/app/routes/: datasets.py  traces.py
TraceLoopCI/app/services/: mock_llm.py  trace_collector.py  trace_writer.py
TraceLoopCI/app/services/evaluators/: __init__.py  llm_judge.py
TraceLoopCI/docs/: README.md
TraceLoopCI/docs/deployment/: docker-compose.md  k8s.md  production.md
TraceLoopCI/docs/evaluation/: custom-rules.md  dimensions.md  llm-judge.md
TraceLoopCI/docs/getting-started/: first-eval.md  quickstart.md
TraceLoopCI/docs/sdk/: python-sdk.md  typescript-sdk.md
TraceLoopCI/examples/: README.md
TraceLoopCI/examples/golden-cases/: import.py
TraceLoopCI/examples/pytest-plugin-demo/: requirements.txt  test_chatbot.py
TraceLoopCI/examples/python-simple-chat/: README.md  chat.py
TraceLoopCI/frontend/: package.json
TraceLoopCI/sdk/python/: README.md  setup.py
TraceLoopCI/sdk/typescript/: README.md
TraceLoopCI/tests/: conftest.py  test_collector.py  test_eval.py  test_routes.py  test_traces.py
(+41 files in other folders)
